templates/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: backend
  ports:
    - name: http-legacy
      port: 8080
      targetPort: 8080
    - name: http
      port: 80
      targetPort: 8080
